Colaboratory を使用して作成しました

--- a/chartmathc01matrix.ipynb
+++ b/chartmathc01matrix.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathc01matrix.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMelVK2flUClZbWDD3v/33D",
+      "authorship_tag": "ABX9TyMnKv5Dh4afGFDHuDbpKcAb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -370,25 +370,25 @@
         "id": "0YUfwgk-bMZx",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 98
+          "height": 110
         },
-        "outputId": "5322753d-1273-4d56-efeb-d4b531272e98"
+        "outputId": "0fefa1d4-69d1-4b9a-e816-86dddc4bfd2a"
       },
       "source": [
         "%%latex\r\n",
         "\\begin{pmatrix}\r\n",
         "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\r\n",
         "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\r\n",
-        "    \\ldots & \\ldots & \\ldots & \\ldots \\\\\r\n",
+        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\r\n",
         "    a_{m1} & a_{m2} & \\ldots & a_{mn}\r\n",
         "\\end{pmatrix}"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\n\\begin{pmatrix}\n    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n    \\ldots & \\ldots & \\ldots & \\ldots \\\\\n    a_{m1} & a_{m2} & \\ldots & a_{mn}\n\\end{pmatrix}",
+            "text/latex": "\\begin{pmatrix}\n    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & a_{m2} & \\ldots & a_{mn}\n\\end{pmatrix}",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
