Colaboratory を使用して作成しました

--- a/linear_fujioka.ipynb
+++ b/linear_fujioka.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_fujioka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOi/XmRcwPKZQeBafq6trGH",
+      "authorship_tag": "ABX9TyPnhq6gD9zlLU1+MyCI1o5F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -361,23 +361,14 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pn6xC2tr1bat"
-      },
-      "source": [
-        "# いまここ p.5"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "WodYhHDczMDw",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 165
+          "height": 379
         },
-        "outputId": "8c543941-5967-4812-e01d-887a322c3cf0"
+        "outputId": "4df40dfb-995c-4b4d-f287-b0bd7172494e"
       },
       "source": [
         "%%latex\r\n",
@@ -385,15 +376,29 @@
         "成分~a_{11}, a_{22}, \\cdots a_{nn}~を~A~の対角成分という。\\\\[0.8em]\r\n",
         "\r\n",
         "正方行列 ~A~が\\\\[0.8em]\r\n",
+        "\r\n",
         "\\quad \\quad \\quad \\quad a_{ij} = 0 \\quad (i \\neq j) \\\\[0.8em]\r\n",
-        "を満たすとき、"
+        "\r\n",
+        "を満たすとき、A~を対角行列という。 正方行列~A~が\\\\[0.8em]\r\n",
+        "\r\n",
+        "\\quad \\quad \\quad \\quad a_{ij} = 0 \\quad (i \\neq j), \\quad a_{11} = a_{22} = \\cdots = a_{nn} \\\\[0.8em]\r\n",
+        "\r\n",
+        "を満たすとき、A~をスカラー行列という。 正方行列~A~が\\\\[0.8em]\r\n",
+        "\r\n",
+        "\\quad \\quad \\quad \\quad a_{ij} = 0 \\quad (i > j) \\\\[0.8em]\r\n",
+        "\r\n",
+        "を満たすとき、A~を上三角行列という。 正方行列~A~が\\\\[0.8em]\r\n",
+        "\r\n",
+        "\\quad \\quad \\quad \\quad a_{ij} = 0 \\quad (i < j) \\\\[0.8em]\r\n",
+        "\r\n",
+        "を満たすとき、A~を下三角行列という。 "
       ],
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "A = (a_{ij})_{n \\times n}~を~n \\times n~ 行列とするとき、A~を~n~次の正方行列という。\\\\\n成分~a_{11}, a_{22}, \\cdots a_{nn}~を~A~の対角成分という。\\\\[0.8em]\n\n正方行列 ~A~が\\\\[0.8em]\n\\quad \\quad \\quad \\quad a_{ij} = 0 \\quad (i \\neq j) \\\\[0.8em]\nを満たすとき、",
+            "text/latex": "A = (a_{ij})_{n \\times n}~を~n \\times n~ 行列とするとき、A~を~n~次の正方行列という。\\\\\n成分~a_{11}, a_{22}, \\cdots a_{nn}~を~A~の対角成分という。\\\\[0.8em]\n\n正方行列 ~A~が\\\\[0.8em]\n\n\\quad \\quad \\quad \\quad a_{ij} = 0 \\quad (i \\neq j) \\\\[0.8em]\n\nを満たすとき、A~を対角行列という。 正方行列~A~が\\\\[0.8em]\n\n\\quad \\quad \\quad \\quad a_{ij} = 0 \\quad (i \\neq j), \\quad a_{11} = a_{22} = \\cdots = a_{nn} \\\\[0.8em]\n\nを満たすとき、A~をスカラー行列という。 正方行列~A~が\\\\[0.8em]\n\n\\quad \\quad \\quad \\quad a_{ij} = 0 \\quad (i > j) \\\\[0.8em]\n\nを満たすとき、A~を上三角行列という。 正方行列~A~が\\\\[0.8em]\n\n\\quad \\quad \\quad \\quad a_{ij} = 0 \\quad (i < j) \\\\[0.8em]\n\nを満たすとき、A~を下三角行列という。 ",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -403,6 +408,85 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XHhVVxty9zMy",
+        "outputId": "5bd24bff-e8bf-42d7-b60c-e09e6ae00570",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 203
+        }
+      },
+      "source": [
+        "%%latex\r\n",
+        "2~次の正方行列\r\n",
+        "~A~ = \r\n",
+        "\\begin{pmatrix}\r\n",
+        "    a & b \\\\\r\n",
+        "    c & d\r\n",
+        "\\end{pmatrix}\r\n",
+        "~とする。\\\\[0.8em]\r\n",
+        "\r\n",
+        "A~の対角成分は~\r\n",
+        "\\begin{pmatrix}\r\n",
+        "    a & 0 \\\\\r\n",
+        "    0 & d\r\n",
+        "\\end{pmatrix}\\\\[0.8em]\r\n",
+        "\r\n",
+        "A~が対角行列、上三角行列、下三角行列となるときそれぞれ\\\\[0.8em]\r\n",
+        "\r\n",
+        "\\begin{pmatrix}\r\n",
+        "    a & 0 \\\\\r\n",
+        "    0 & a\r\n",
+        "\\end{pmatrix}, \\quad\r\n",
+        "\r\n",
+        "\\begin{pmatrix}\r\n",
+        "    a & b \\\\\r\n",
+        "    0 & d\r\n",
+        "\\end{pmatrix}, \\quad\r\n",
+        "\r\n",
+        "\\begin{pmatrix}\r\n",
+        "    a & 0 \\\\\r\n",
+        "    c & d\r\n",
+        "\\end{pmatrix}"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "2~次の正方行列\n~A~ = \n\\begin{pmatrix}\n    a & b \\\\\n    c & d\n\\end{pmatrix}\n~とする。\\\\[0.8em]\n\nA~の対角成分は~\n\\begin{pmatrix}\n    a & 0 \\\\\n    0 & d\n\\end{pmatrix}\\\\[0.8em]\n\nA~が対角行列、上三角行列、下三角行列となるときそれぞれ\\\\[0.8em]\n\n\\begin{pmatrix}\n    a & 0 \\\\\n    0 & a\n\\end{pmatrix}, \\quad\n\n\\begin{pmatrix}\n    a & b \\\\\n    0 & d\n\\end{pmatrix}, \\quad\n\n\\begin{pmatrix}\n    a & 0 \\\\\n    c & d\n\\end{pmatrix}",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pn6xC2tr1bat"
+      },
+      "source": [
+        "# いまここ p.6"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eQasAnsI_AIR"
+      },
+      "source": [
+        "%%latex"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
