--- a/linear_fujioka.ipynb
+++ b/linear_fujioka.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_fujioka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOh8sYTPJmvpZpt5Mewx9lR",
+      "authorship_tag": "ABX9TyP6ZXKiFYbtr2Z9LRJYRO5F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -566,12 +566,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4MnXA7QfmSc8",
-        "outputId": "30f4b196-6d91-4183-ada9-804660c19837",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
-        }
+        },
+        "id": "4MnXA7QfmSc8",
+        "outputId": "30f4b196-6d91-4183-ada9-804660c19837"
       },
       "source": [
         "%%latex\r\n",
@@ -598,12 +598,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "slOvGGoYm2Kf",
-        "outputId": "692810e1-057a-48b3-e9bb-6cc9ed7a9612",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 147
-        }
+        },
+        "id": "slOvGGoYm2Kf",
+        "outputId": "692810e1-057a-48b3-e9bb-6cc9ed7a9612"
       },
       "source": [
         "%%latex\r\n",
@@ -643,27 +643,159 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pi0XLNTRoFzJ",
-        "outputId": "bf88b997-ca03-4dd0-8207-838f78f7cae1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 73
-        }
+          "height": 443
+        },
+        "id": "pi0XLNTRoFzJ",
+        "outputId": "58a52ff5-1078-4604-fb33-5a2b4275ecc3"
       },
       "source": [
         "%%latex\r\n",
         "転置行列\\\\[0.8em]\r\n",
         "\r\n",
-        "m \\times n~ 行列"
+        "m \\times n~ 行列~A~の行と列を入れ替えて得られる~n \\times m~ 行列を~{}^t A, A^t~ または~{}^T A~ などと書き、\\\\\r\n",
+        "~A~の転置行列という。 すなわち、\\\\[0.8em]\r\n",
+        "\\quad \\quad \\quad \\quad \r\n",
+        "A = \r\n",
+        "\\begin{pmatrix}\r\n",
+        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\r\n",
+        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\r\n",
+        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\r\n",
+        "    a_{m1} & a_{m2} & \\ldots & a_{mn}\r\n",
+        "\\end{pmatrix} \\\\[0.8em]\r\n",
+        "\r\n",
+        "のとき、\\\\[0.8em]\r\n",
+        "\r\n",
+        "\\quad \\quad \\quad \\quad \r\n",
+        "{}^t A = \r\n",
+        "\\begin{pmatrix}\r\n",
+        "    a_{11} & a_{21} & \\ldots & a_{m1} \\\\\r\n",
+        "    a_{12} & a_{22} & \\ldots & a_{m2} \\\\\r\n",
+        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\r\n",
+        "    a_{1n} & a_{2m} & \\ldots & a_{mn}\r\n",
+        "\\end{pmatrix} \\\\[0.8em]\r\n",
+        "\r\n",
+        "である。定義より、\\\\[0.8em]\r\n",
+        "\r\n",
+        "\\quad \\quad \\quad \\quad \r\n",
+        "{}^t({}^t A) = A \\\\[0.8em]\r\n",
+        "\r\n",
+        "が成り立つ。 なお転置行列を作ることを、転置を取る、ともいう。"
       ],
-      "execution_count": 86,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "転置行列\\\\[0.8em]\n\nm \\times n~ 行列",
+            "text/latex": "転置行列\\\\[0.8em]\n\nm \\times n~ 行列~A~の行と列を入れ替えて得られる~n \\times m~ 行列を~{}^t A, A^t~ または~{}^T A~ などと書き、\\\\\n~A~の転置行列という。 すなわち、\\\\[0.8em]\n\\quad \\quad \\quad \\quad \nA = \n\\begin{pmatrix}\n    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & a_{m2} & \\ldots & a_{mn}\n\\end{pmatrix} \\\\[0.8em]\n\nのとき、\\\\[0.8em]\n\n\\quad \\quad \\quad \\quad \n{}^t A = \n\\begin{pmatrix}\n    a_{11} & a_{21} & \\ldots & a_{m1} \\\\\n    a_{12} & a_{22} & \\ldots & a_{m2} \\\\\n    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n    a_{1n} & a_{2m} & \\ldots & a_{mn}\n\\end{pmatrix} \\\\[0.8em]\n\nである。定義より、\\\\[0.8em]\n\n\\quad \\quad \\quad \\quad \n{}^t({}^t A) = A \\\\[0.8em]\n\nが成り立つ。 なお転置行列を作ることを、転置を取る、ともいう。",
             "text/plain": [
               "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DWh3Kaflz4LS"
+      },
+      "source": [
+        "# いまここ p.7"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zmwgrUCIz8ou",
+        "outputId": "3673386e-521e-4e94-d77a-f73e8f38a378",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 92
+        }
+      },
+      "source": [
+        "%%latex\r\n",
+        "例題 \\\\[0.8em]\r\n",
+        "\r\n",
+        "2 \\times 3~ 行列~\r\n",
+        "\\begin{pmatrix}\r\n",
+        "    1 & 2 & 3 \\\\\r\n",
+        "    4 & 5 & 6\r\n",
+        "\\end{pmatrix}~\r\n",
+        "の転置行列を求める。 \\\\[0.8em]"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "例題 \\\\[0.8em]\n\n2 \\times 3~ 行列~\n\\begin{pmatrix}\n    1 & 2 & 3 \\\\\n    4 & 5 & 6\n\\end{pmatrix}~\nの転置行列を求める。",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TCM83oPY1A56",
+        "outputId": "66f24aa2-11ce-4915-82ab-8e6f8ebbc25b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        }
+      },
+      "source": [
+        "from sympy import *\r\n",
+        "init_printing()\r\n",
+        "A = Matrix([[1,2,3],[4,5,6]])\r\n",
+        "display(A)\r\n",
+        "print()\r\n",
+        "display (A.T)"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 2 & 3\\\\4 & 5 & 6\\end{matrix}\\right]$",
+            "text/plain": [
+              "⎡1  2  3⎤\n",
+              "⎢       ⎥\n",
+              "⎣4  5  6⎦"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 4\\\\2 & 5\\\\3 & 6\\end{matrix}\\right]$",
+            "text/plain": [
+              "⎡1  4⎤\n",
+              "⎢    ⎥\n",
+              "⎢2  5⎥\n",
+              "⎢    ⎥\n",
+              "⎣3  6⎦"
             ]
           },
           "metadata": {
