Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -382,26 +382,28 @@
         "id": "205xo7fYfLLI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 164
+          "height": 185
         },
-        "outputId": "164676c5-52c2-4dbf-fe3e-b8b39b182e92"
+        "outputId": "17144c9e-c83c-4d64-a139-cccd8bef4984"
       },
       "source": [
         "%%latex\n",
         "\\mathrm{a b c d e f A B C }\\\\\n",
         "\\bm{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n",
+        "\\mathbf{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n",
         "\\text{a b c d e f A B C }\\\\\n",
         "\\mathbb{a b c d e f A B C }\\\\\n",
+        "% \\mathbbm{a b c d e f A B C }\\\\\n",
         "\\mathcal {abcdefABCDEF}\\\\\n",
         "\\mathfrak {abcdefABCDEF}\\\\\n",
         "\\mathit {abcdefABCDEF}\\\\"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\mathrm{a b c d e f A B C }\\\\\n\\bm{a b c d e f A B C }\\\\\n\\text{a b c d e f A B C }\\\\\n\\mathbb{a b c d e f A B C }\\\\\n\\mathcal {abcdefABCDEF}\\\\\n\\mathfrak {abcdefABCDEF}\\\\\n\\mathit {abcdefABCDEF}\\\\",
+            "text/latex": "\\mathrm{a b c d e f A B C }\\\\\n\\bm{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n\\mathbf{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n\\text{a b c d e f A B C }\\\\\n\\mathbb{a b c d e f A B C }\\\\\n% \\mathbbm{a b c d e f A B C }\\\\\n\\mathcal {abcdefABCDEF}\\\\\n\\mathfrak {abcdefABCDEF}\\\\\n\\mathit {abcdefABCDEF}\\\\",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
