--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -382,15 +382,15 @@
         "id": "205xo7fYfLLI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 185
+          "height": 205
         },
-        "outputId": "17144c9e-c83c-4d64-a139-cccd8bef4984"
+        "outputId": "6471af07-4f35-4ec7-bb55-5cdd697fb6ae"
       },
       "source": [
         "%%latex\n",
         "\\mathrm{a b c d e f A B C }\\\\\n",
-        "\\bm{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n",
-        "\\mathbf{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n",
+        "\\mathbf{a b c d e f A B C }\\\\ %%ベクトルに使う\n",
+        "\\bm{a b c d e f A B C }\\\\ \n",
         "\\text{a b c d e f A B C }\\\\\n",
         "\\mathbb{a b c d e f A B C }\\\\\n",
         "% \\mathbbm{a b c d e f A B C }\\\\\n",
@@ -398,12 +398,12 @@
         "\\mathfrak {abcdefABCDEF}\\\\\n",
         "\\mathit {abcdefABCDEF}\\\\"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\mathrm{a b c d e f A B C }\\\\\n\\bm{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n\\mathbf{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n\\text{a b c d e f A B C }\\\\\n\\mathbb{a b c d e f A B C }\\\\\n% \\mathbbm{a b c d e f A B C }\\\\\n\\mathcal {abcdefABCDEF}\\\\\n\\mathfrak {abcdefABCDEF}\\\\\n\\mathit {abcdefABCDEF}\\\\",
+            "text/latex": "\\mathrm{a b c d e f A B C }\\\\\n\\bm{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n\\mathbf{a b c d e f A B C }\\\\ %%ベクトルに使うらしい\n\\text{a b c d e f A B C }\\\\\n\\mathbb{a b c d e f A B C }\\\\\n% \\mathbbm{a b c d e f A B C }\\\\\n\\bm{a b c d e f A B C }\\\\\n\\mathcal {abcdefABCDEF}\\\\\n\\mathfrak {abcdefABCDEF}\\\\\n\\mathit {abcdefABCDEF}\\\\",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
