Colaboratory を使用して作成しました

--- a/linear_fujioka.ipynb
+++ b/linear_fujioka.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_fujioka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPNFQ/Tyv/cLJe1MkFq2QYY",
+      "authorship_tag": "ABX9TyP905iqqYdTWU0CdDjh2mzd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -952,12 +952,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D4pk-G-4Iik8",
-        "outputId": "40952695-86bb-4283-b946-805a53154c6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 114
-        }
+        },
+        "id": "D4pk-G-4Iik8",
+        "outputId": "40952695-86bb-4283-b946-805a53154c6e"
       },
       "source": [
         "%%latex\r\n",
@@ -1003,12 +1003,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IrvQddzQKJKL",
-        "outputId": "d4ee2e11-9e75-4479-9e0b-d36f7d5713c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
-        }
+        },
+        "id": "IrvQddzQKJKL",
+        "outputId": "d4ee2e11-9e75-4479-9e0b-d36f7d5713c3"
       },
       "source": [
         "%%latex\r\n",
@@ -1041,12 +1041,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "etnx3C7QL2ON",
-        "outputId": "a3da6fff-0fe1-4f3d-d621-c3f5c651c3f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 112
-        }
+        },
+        "id": "etnx3C7QL2ON",
+        "outputId": "a3da6fff-0fe1-4f3d-d621-c3f5c651c3f8"
       },
       "source": [
         "%%latex\r\n",
@@ -1078,13 +1078,82 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HRCYhcF5Md4S"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "id": "HRCYhcF5Md4S",
+        "outputId": "8daaf0d9-2216-4f73-f44d-858adc529b51"
       },
       "source": [
-        "from sympy import *\r\n"
+        "from sympy import *\r\n",
+        "from IPython.display import Markdown\r\n",
+        "init_printing()\r\n",
+        "display(Markdown(\"解答\"))\r\n",
+        "print()\r\n",
+        "display(Matrix([[5,4],[3,2],[1,0]]))\r\n",
+        "print()\r\n",
+        "display(Matrix([[5,4],[3,2],[1,0]]).T)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/markdown": "解答",
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}5 & 4\\\\3 & 2\\\\1 & 0\\end{matrix}\\right]$",
+            "text/plain": [
+              "⎡5  4⎤\n",
+              "⎢    ⎥\n",
+              "⎢3  2⎥\n",
+              "⎢    ⎥\n",
+              "⎣1  0⎦"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}5 & 3 & 1\\\\4 & 2 & 0\\end{matrix}\\right]$",
+            "text/plain": [
+              "⎡5  3  1⎤\n",
+              "⎢       ⎥\n",
+              "⎣4  2  0⎦"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
