Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -58,12 +58,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "M_IYHSO3fN5l"
+      },
+      "source": [
+        "# メモ\r\n",
+        "Colab で latex を書くには 3 通りある。\r\n",
+        "\r\n",
+        "1. マークダウンでテキストセルに書く。 これが一番簡単。\r\n",
+        "2. %%latex マジックでコードセルに書く。 こうすると、latex のソースと結果のアウトプットの両方が見えて latex の学習上効果的だが、nbconverter や印刷で latex アウトプットが正しく表示されない。\r\n",
+        "3. from sympy import *, from IPython.display import Markdown, display(Markdown(\"\")) で表示する。こうすると、若干手間がかかるが明示的かつアウトプットも保証されるので、この方向で行きたい。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "X4JZJvQLY_rw"
       },
       "source": [
-        "# メモ\n",
+        "# 参考サイト\n",
         "\n",
-        "1. colab は latex のサブセット(MathJax)をサポートしていて、数式を書くことができる。\n",
         "1. 参考サイトを読みながら latex を勉強する。  \n",
         "TeX入門 ( http://www.comp.tmu.ac.jp/tsakai/lectures/intro_tex.html )  \n",
         "TeX入門Wiki ( https://texwiki.texjp.org/)  \n",
@@ -398,7 +411,7 @@
         "\\mathfrak {abcdefABCDEF}\\\\\n",
         "\\mathit {abcdefABCDEF}\\\\"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
