Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -108,15 +108,153 @@
         "id": "dlP5VSVvbsxB"
       },
       "source": [
-        "# はじめに\n",
-        "\n",
-        "実験学習。 マークダウンでテキストの中に latex を入れることができる。\n",
-        "\n",
-        "$$\n",
-        "x = 3\n",
-        "$$\n",
-        "\n",
-        "これをセルマジックの `%%latex` で書くと次のようになる。"
+        "# はじめに ～ 実験学習\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ztMpC1OwjeeE",
+        "outputId": "66922116-5978-4ac1-c3fe-d0d76f9c4d0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        }
+      },
+      "source": [
+        "# 実験学習\r\n",
+        "from sympy import *\r\n",
+        "from IPython.display import Markdown\r\n",
+        "display(Markdown(\"実験学習 $x = 3$ と書く\"))\r\n",
+        "x = symbols('x')\r\n",
+        "display(Eq(x,3))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/markdown": "実験学習 $x = 3$ と書く",
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x = 3$",
+            "text/plain": [
+              "Eq(x, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SnR5VXGYkkbZ",
+        "outputId": "0fb98124-57ab-493a-db53-3e7b54a141bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 902
+        }
+      },
+      "source": [
+        "from sympy import *\r\n",
+        "from IPython.display import Markdown\r\n",
+        "display(Markdown(\"普通にマークダウンで書くときと同じように書ける。スペース    はどう反映されるか。\"))\r\n",
+        "display(Markdown(\"複数のスペースは 1 つになってしまう。\\quad は使えるか。使えないね。\"))\r\n",
+        "help(Markdown)\r\n"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/markdown": "普通にマークダウンで書くときと同じように書ける。スペース    はどう反映されるか。",
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/markdown": "複数のスペースは 1 つになってしまう。\\quad は使えるか。使えないね。",
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Help on class Markdown in module IPython.core.display:\n",
+            "\n",
+            "class Markdown(TextDisplayObject)\n",
+            " |  Markdown(data=None, url=None, filename=None)\n",
+            " |  \n",
+            " |  Validate that display data is text\n",
+            " |  \n",
+            " |  Method resolution order:\n",
+            " |      Markdown\n",
+            " |      TextDisplayObject\n",
+            " |      DisplayObject\n",
+            " |      builtins.object\n",
+            " |  \n",
+            " |  Methods inherited from DisplayObject:\n",
+            " |  \n",
+            " |  __init__(self, data=None, url=None, filename=None)\n",
+            " |      Create a display object given raw data.\n",
+            " |      \n",
+            " |      When this object is returned by an expression or passed to the\n",
+            " |      display function, it will result in the data being displayed\n",
+            " |      in the frontend. The MIME type of the data should match the\n",
+            " |      subclasses used, so the Png subclass should be used for 'image/png'\n",
+            " |      data. If the data is a URL, the data will first be downloaded\n",
+            " |      and then displayed. If\n",
+            " |      \n",
+            " |      Parameters\n",
+            " |      ----------\n",
+            " |      data : unicode, str or bytes\n",
+            " |          The raw data or a URL or file to load the data from\n",
+            " |      url : unicode\n",
+            " |          A URL to download the data from.\n",
+            " |      filename : unicode\n",
+            " |          Path to a local file to load the data from.\n",
+            " |  \n",
+            " |  __repr__(self)\n",
+            " |      Return repr(self).\n",
+            " |  \n",
+            " |  reload(self)\n",
+            " |      Reload the raw data from file or URL.\n",
+            " |  \n",
+            " |  ----------------------------------------------------------------------\n",
+            " |  Data descriptors inherited from DisplayObject:\n",
+            " |  \n",
+            " |  __dict__\n",
+            " |      dictionary for instance variables (if defined)\n",
+            " |  \n",
+            " |  __weakref__\n",
+            " |      list of weak references to the object (if defined)\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
