Colaboratory を使用して作成しました

--- a/linear_fujioka.ipynb
+++ b/linear_fujioka.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_fujioka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNCf2txtowVgpYQcQr5So0C",
+      "authorship_tag": "ABX9TyP8vJwHytTlK8mGnENOWdpW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,34 +43,74 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AcEvxEjq1d-M"
+      },
+      "source": [
+        "# 行列\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BXZy4Q-5100i"
+      },
+      "source": [
+        "1. 行列とは数を長方形状に並べたものである。\r\n",
+        "1. すべての成分が 0 の行列を零行列という。\r\n",
+        "1. 行と列の個数が等しい行列を正方行列という。\r\n",
+        "1. 特別な正方行列として、単位行列、対角行列、スカラー行列、上三角行列、下三角行列があげられる。\r\n",
+        "1. 単位行列はクロネッカーのデルタを用いて、簡単に表すことができる。\r\n",
+        "1. 転置をとっても変わらない正方行列を対称行列という。\r\n",
+        "1. 行ベクトル、列ベクトルをあわせて数ベクトルという。\r\n",
+        "1. すべての成分が 0 の数ベクトルを零ベクトルという。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3icfyYDO2qvn"
+      },
+      "source": [
+        "自然数 $i=1,2,\\cdots,m$ および $j=1,2,\\cdots,n$ に対して、数 $a_{ij}$ が対応しているとする。 \r\n",
+        "\r\n",
+        "このとき、$mn$ 個の数 $a_{11},a_{12},\\cdots,a_{mn}$ を丸括弧  ( ) や角括弧 [ ] を用いて長方形状に並べたものを $m \\times n$ 行列または$m$行$n$列の行列という。\r\n",
+        "\r\n",
+        "$a_{ij}$ の $i$ や $j$ を添字(そえじ)という。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 177
+          "height": 110
         },
-        "id": "lwSLe2bMF_QF",
-        "outputId": "ce41903d-aa24-4b1c-d8a5-722c41e7db04"
+        "id": "HZifWg5xISWU",
+        "outputId": "82b40524-f0c7-4caf-e0b4-fbb510ee4e77"
       },
       "source": [
-        "# 行列 p.2\r\n",
-        "%%latex\r\n",
-        "\\displaystyle\r\n",
-        "\\bullet~~行列とは数を長方形状に並べたものである。\\\\\r\n",
-        "\\bullet~すべての成分が~0~の行列を零行列という。\\\\\r\n",
-        "\\bullet~行と列の個数が等しい行列を正方行列という。\\\\\r\n",
-        "\\bullet~特別な正方行列として、単位行列、対角行列、スカラー行列、上三角行列、下三角行列があげられる。\\\\\r\n",
-        "\\bullet~単位行列はクロネッカーのデルタを用いて、簡単に表すことができる。\\\\\r\n",
-        "\\bullet~転置をとっても変わらない正方行列を対称行列という。\\\\\r\n",
-        "\\bullet~行ベクトル、列ベクトルをあわせて数ベクトルという。\\\\\r\n",
-        "\\bullet~すべての成分が~0~の数ベクトルを零ベクトルという。\\\\"
+        "%%latex\n",
+        "\\begin{pmatrix}\n",
+        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n",
+        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n",
+        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+        "    a_{m1} & a_{m2} & \\ldots & a_{mn}\n",
+        "\\end{pmatrix}, \\quad\n",
+        "\\begin{bmatrix}\n",
+        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n",
+        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n",
+        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+        "    a_{m1} & a_{m2} & \\ldots & a_{mn}\n",
+        "\\end{bmatrix} "
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\n\\bullet~~行列とは数を長方形状に並べたものである。\\\\\n\\bullet~すべての成分が~0~の行列を零行列という。\\\\\n\\bullet~行と列の個数が等しい行列を正方行列という。\\\\\n\\bullet~特別な正方行列として、単位行列、対角行列、スカラー行列、上三角行列、下三角行列があげられる。\\\\\n\\bullet~単位行列はクロネッカーのデルタを用いて、簡単に表すことができる。\\\\\n\\bullet~転置をとっても変わらない正方行列を対称行列という。\\\\\n\\bullet~行ベクトル、列ベクトルをあわせて数ベクトルという。\\\\\n\\bullet~すべての成分が~0~の数ベクトルを零ベクトルという。\\\\",
+            "text/latex": "\\begin{pmatrix}\n    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & a_{m2} & \\ldots & a_{mn}\n\\end{pmatrix}, \\quad\n\\begin{bmatrix}\n    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & a_{m2} & \\ldots & a_{mn}\n\\end{bmatrix} ",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -82,49 +122,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 241
-        },
-        "id": "HZifWg5xISWU",
-        "outputId": "a137bed0-7206-4236-b539-563b719275bc"
+        "id": "BASpVylS4deM"
       },
       "source": [
-        "%%latex\r\n",
-        "自然数~i=1,2,\\cdots,m~および~j=1,2,\\cdots,n~に対して、数~a_{ij}~が対応しているとする。 \\\\\r\n",
-        "このとき、mn~個の数~a_{11},a_{12},\\cdots,a_{mn}~を丸括弧 ~(~)~や角括弧~[~]~を用いて長方形状に\\\\[0.8em]\r\n",
-        "\\begin{pmatrix}\r\n",
-        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\r\n",
-        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\r\n",
-        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\r\n",
-        "    a_{m1} & a_{m2} & \\ldots & a_{mn}\r\n",
-        "\\end{pmatrix}, \\quad\r\n",
-        "\\begin{bmatrix}\r\n",
-        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\r\n",
-        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\r\n",
-        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\r\n",
-        "    a_{m1} & a_{m2} & \\ldots & a_{mn}\r\n",
-        "\\end{bmatrix} \\\\[0.8em]\r\n",
-        "と並べたものを~m \\times n~ 行列または~m~行~n~列の行列という。\\\\[1em]\r\n",
+        "例  \r\n",
         "\r\n",
-        "a_{ij}の~i~や~j~を添字(そえじ)という。\r\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "自然数~i=1,2,\\cdots,m~および~j=1,2,\\cdots,n~に対して、数~a_{ij}~が対応しているとする。 \\\\\nこのとき、mn~個の数~a_{11},a_{12},\\cdots,a_{mn}~を丸括弧 ~(~)~や角括弧~[~]~を用いて長方形状に\\\\[0.8em]\n\\begin{pmatrix}\n    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & a_{m2} & \\ldots & a_{mn}\n\\end{pmatrix}, \\quad\n\\begin{bmatrix}\n    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & a_{m2} & \\ldots & a_{mn}\n\\end{bmatrix} \\\\[0.8em]\nと並べたものを~m \\times n~ 行列または~m~行~n~列の行列という。\\\\[1em]\n\na_{ij}の~i~や~j~を添字(そえじ)という。",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "次の行列は $2 \\times 3$ 行列である。"
       ]
     },
     {
@@ -133,26 +138,23 @@
         "id": "rN67qBN3nPnM",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 92
+          "height": 58
         },
-        "outputId": "a1e8d368-ac93-4150-cd8c-1695de2ce218"
+        "outputId": "59e6d164-e4c6-4151-bf25-c6f1e9783196"
       },
       "source": [
         "%%latex\r\n",
-        "例\\\\[0.8em]\r\n",
-        "行列~\r\n",
         "\\begin{pmatrix}\r\n",
         "    1 & 2 & 3 \\\\\r\n",
         "    4 & 5 & 6\r\n",
-        "\\end{pmatrix}\r\n",
-        "~は~2 \\times 3~ 行列である。"
+        "\\end{pmatrix}\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "例\\\\[0.8em]\n行列~\n\\begin{pmatrix}\n    1 & 2 & 3 \\\\\n    4 & 5 & 6\n\\end{pmatrix}\n~は~2 \\times 3~ 行列である。",
+            "text/latex": "\\begin{pmatrix}\n    1 & 2 & 3 \\\\\n    4 & 5 & 6\n\\end{pmatrix}",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -161,6 +163,15 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yMw4Jetp4w9K"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -818,7 +829,7 @@
         "  3 & 5 & 6\r\n",
         "\\end{pmatrix}"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -855,7 +866,7 @@
         "\r\n",
         "である。"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -893,7 +904,7 @@
         "\r\n",
         "大文字しか~2~重にならない。"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -933,7 +944,7 @@
         "1.~A~の対角成分を答える。\r\n",
         "2.~A~が対角行列、スカラー行列、上三角行列、下三角行列になるとき、~A~をそれぞれ具体的に示す。"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -984,7 +995,7 @@
         "    a_{31} & a_{32} & a_{33}\r\n",
         "\\end{pmatrix}"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1022,7 +1033,7 @@
         "\r\n",
         "\\delta_{12}=\\delta_{13}=\\delta_{21}=\\delta_{23}=\\delta_{31}=\\delta_{32}=0\r\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1059,7 +1070,7 @@
         "    1 & 0\r\n",
         "\\end{pmatrix}~の転置行列を求める。"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1095,7 +1106,7 @@
         "print()\r\n",
         "display(Matrix([[5,4],[3,2],[1,0]]).T)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1159,11 +1170,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "m8ihmNU0awx1",
-        "outputId": "a1b27930-e6d4-4cb7-bc16-992b970b1c55",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 92
-        }
+        },
+        "outputId": "a1b27930-e6d4-4cb7-bc16-992b970b1c55"
       },
       "source": [
         "%%latex\r\n",
@@ -1178,7 +1189,7 @@
         "    0 &  4\r\n",
         "\\end{pmatrix}"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1198,11 +1209,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "yK3vbJTabodS",
-        "outputId": "fdeb7a63-bcfa-4851-d71f-d3c80ede426b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 240
-        }
+        },
+        "outputId": "fdeb7a63-bcfa-4851-d71f-d3c80ede426b"
       },
       "source": [
         "from sympy import *\r\n",
@@ -1219,7 +1230,7 @@
         "display(solve((A-B),a,b,c))\r\n",
         "display(solve((A-B)))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1324,11 +1335,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "huB4rVGbdjkm",
-        "outputId": "e1339c4e-a489-4716-ffb2-d32873d50542",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 46
-        }
+        },
+        "outputId": "e1339c4e-a489-4716-ffb2-d32873d50542"
       },
       "source": [
         "from sympy import *\r\n",
@@ -1338,7 +1349,7 @@
         "a,b,c = symbols('a,b,c')\r\n",
         "A = Matrix([[a**2+b**2, a*b+b*c],[a*b+b*c, b**2+c**2],[]])"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
