--- a/linear_fujioka.ipynb
+++ b/linear_fujioka.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_fujioka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOSu+U9nIushwsgFczTlkH8",
+      "authorship_tag": "ABX9TyP/p0YnxNOvmYFAFZStwmee",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,19 +122,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZEV4ROD2_ltQ"
-      },
-      "source": [
-        "from sympy import *\r\n",
-        "init_printing()\r\n",
-        "A=Matrix"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "BASpVylS4deM"
@@ -179,6 +166,39 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YonkyqdHF8Pt",
+        "outputId": "52444481-e5e4-427f-a8ba-4c5683480c35",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "source": [
+        "from sympy import *\r\n",
+        "A=Matrix([[1,2,3],[4,5,6]])\r\n",
+        "display(A)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 2 & 3\\\\4 & 5 & 6\\end{matrix}\\right]$",
+            "text/plain": [
+              "Matrix([\n",
+              "[1, 2, 3],\n",
+              "[4, 5, 6]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "yMw4Jetp4w9K"
@@ -209,7 +229,7 @@
           "height": 99
         },
         "id": "q9uNR1fjn9nN",
-        "outputId": "ff7fdaee-737f-4e67-d636-2f4ba7220138"
+        "outputId": "48e08e97-715a-43fd-ef07-aaad2c9493bb"
       },
       "source": [
         "%%latex\r\n",
@@ -220,12 +240,12 @@
         "    a_{mj} \r\n",
         "\\end{pmatrix}"
       ],
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\begin{pmatrix}\n    a_{1j} \\\\\n    a_{2j} \\\\\n    a_{2j} \\\\\n    a_{mj} \n\\end{pmatrix}",
+            "text/latex": "\\displaystyle\n\\begin{pmatrix}\n    a_{1j} \\\\\n    a_{2j} \\\\\n    a_{2j} \\\\\n    a_{mj} \n\\end{pmatrix}",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -237,41 +257,47 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 202
-        },
-        "id": "WbBcxf_Jqmcf",
-        "outputId": "81c62c39-49cb-4082-ecac-068e1a380c09"
+        "id": "7NpOcGetGQN3"
       },
       "source": [
-        "%%latex\r\n",
-        "~A=(a_{ij})_{m \\times n}~を~m \\times n~行列、 B=(b_{kl})_{p \\times q}~を~p \\times q~行列とする。\\\\\r\n",
-        "~A~と~B~が同じ型で、対応する成分が等しいとき、すなわち、~m=p~かつ~n=q~で、\\\\\r\n",
-        "任意の~i=1,2,\\cdots,m~および~j=1,2,\\cdots,n~にたいして~a_{ij}=b_{ij}~がなりたつとき\\\\[0.8em]\r\n",
+        " $ A=(a_{ij})_{m \\times n} $ を $ m \\times n $ 行列、 $ B=(b_{kl})_{p \\times q} $ を $ p \\times q $ 行列とする。\r\n",
         "\r\n",
-        "\\quad \\quad \\quad \\quad A = B \\\\[0.8em]\r\n",
+        "$ A $ と $ B $ が同じ型で、対応する成分が等しいとき、すなわち、 $ m=p $ かつ $ n=q $ で、\r\n",
+        "任意の $ i=1,2,\\cdots,m $ および $ j=1,2,\\cdots,n $ に対して $ a_{ij}=b_{ij} $ が成り立つとき\r\n",
         "\r\n",
-        "と記し、A~と~B~は等しい、という。A = B~でないときは\\\\[0.8em]\r\n",
+        "$$ A = B$$\r\n",
         "\r\n",
-        "\\quad \\quad \\quad \\quad A \\neq B \\\\[0.8em]\r\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "~A=(a_{ij})_{m \\times n}~を~m \\times n~行列、 B=(b_{kl})_{p \\times q}~を~p \\times q~行列とする。\\\\\n~A~と~B~が同じ型で、対応する成分が等しいとき、すなわち、~m=p~かつ~n=q~で、\\\\\n任意の~i=1,2,\\cdots,m~および~j=1,2,\\cdots,n~にたいして~a_{ij}=b_{ij}~がなりたつとき\\\\[0.8em]\n\n\\quad \\quad \\quad \\quad A = B \\\\[0.8em]\n\nと記し、A~と~B~は等しい、という。A = B~でないときは\\\\[0.8em]\n\n\\quad \\quad \\quad \\quad A \\neq B \\\\[0.8em]",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "と記し、A $ と $ B $ は等しい、という。A = B $ でないときは\r\n",
+        "\r\n",
+        "$$ A \\neq B $$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aJM36xTfHLne"
+      },
+      "source": [
+        "$$\r\n",
+        "\\begin{array}{rcl}\r\n",
+        "\\begin{pmatrix}\r\n",
+        "    a & b & c \\\\\r\n",
+        "    d & e & f\r\n",
+        "\\end{pmatrix} \r\n",
+        "&=&\r\n",
+        "\\begin{pmatrix}\r\n",
+        "    p & q & r \\\\\r\n",
+        "    s & t & u\r\n",
+        "\\end{pmatrix} \\\\[0.8em]\r\n",
+        "\r\n",
+        "&\\Updownarrow& \\\\[0.8em]\r\n",
+        "\r\n",
+        "a = p,\\quad  b = q,\\quad  c = r&,& d = s,\\quad  e = t,\\quad  f = u\r\n",
+        "\r\n",
+        "\\end{array}\r\n",
+        "$$"
       ]
     },
     {
